--- a/pom.xml
+++ b/pom.xml
@@ -91,11 +91,11 @@
                             <artifactId>lombok</artifactId>
                             <version>${lombok.version}</version>
                         </path>
-<!--                        <path>-->
-<!--                            <groupId>org.hibernate</groupId>-->
-<!--                            <artifactId>hibernate-jpamodelgen</artifactId>-->
-<!--                            <version>${hibernate.version}</version>-->
-<!--                        </path>-->
+                        <path>
+                            <groupId>org.hibernate</groupId>
+                            <artifactId>hibernate-jpamodelgen</artifactId>
+                            <version>${hibernate.version}</version>
+                        </path>
                     </annotationProcessorPaths>
                 </configuration>
             </plugin>
