--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,3 +18,7 @@ spring:
     properties:
       hibernate:
         format_sql: true
+        order_inserts: true
+        batch_versioned_data: true
+        jdbc:
+          batch_size: 50
