--- a/core/pom.xml
+++ b/core/pom.xml
@@ -81,6 +81,9 @@
                                 <openApiNullable>false</openApiNullable>
                                 <dateLibrary>java8</dateLibrary>
                             </configOptions>
+<!--                            <importMappings>-->
+<!--                                <importMapping>ErrorMessage=nest.pgw.core.packet.ErrorMessage</importMapping>-->
+<!--                            </importMappings>-->
                         </configuration>
                     </execution>
                 </executions>
