--- a/ship-service/pom.xml
+++ b/ship-service/pom.xml
@@ -29,6 +29,11 @@
             <version>8.0.29</version>
             <scope>runtime</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-stream-rabbit</artifactId>
+            <version>3.2.4</version>
+        </dependency>
     </dependencies>
 
 </project>
